--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4J7HYVSTYD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-4J7HYVSTYD');
+    </script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>easy-ai-links</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>AI Tools Navigation - Discover the Best AI Tools | 发现最佳AI工具</title>
+    <meta name="description" content="Discover and explore the best AI tools for productivity, creativity, and innovation. Find ChatGPT, Midjourney, Claude, and more top AI applications with multilingual support." />
+    <meta name="keywords" content="AI tools, artificial intelligence, ChatGPT, Midjourney, Claude, AI applications, productivity tools, AI navigation" />
+    <meta name="author" content="AI Tools Navigation" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 
-    <meta property="og:title" content="easy-ai-links" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="AI Tools Navigation - Discover the Best AI Tools" />
+    <meta property="og:description" content="Discover and explore the best AI tools for productivity, creativity, and innovation. Find ChatGPT, Midjourney, Claude, and more top AI applications." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://ai-tools-navigation.pages.dev" />
+    <meta property="og:image" content="https://ai-tools-navigation.pages.dev/placeholder.svg" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="zh_CN" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="AI Tools Navigation - Discover the Best AI Tools" />
+    <meta name="twitter:description" content="Discover and explore the best AI tools for productivity, creativity, and innovation." />
+    <meta name="twitter:image" content="https://ai-tools-navigation.pages.dev/placeholder.svg" />
   </head>
 
   <body>
