fix: 更新所有文件中的域名为aitoolsguidex.com

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <meta property="og:title" content="AI Tools Navigation - Discover the Best AI Tools" />
     <meta property="og:description" content="Discover and explore the best AI tools for productivity, creativity, and innovation. Find ChatGPT, Midjourney, Claude, and more top AI applications." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ai-tools-navigation.pages.dev" />
-    <meta property="og:image" content="https://ai-tools-navigation.pages.dev/placeholder.svg" />
+    <meta property="og:url" content="https://aitoolsguidex.com" />
+    <meta property="og:image" content="https://aitoolsguidex.com/placeholder.svg" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="zh_CN" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="AI Tools Navigation - Discover the Best AI Tools" />
     <meta name="twitter:description" content="Discover and explore the best AI tools for productivity, creativity, and innovation." />
-    <meta name="twitter:image" content="https://ai-tools-navigation.pages.dev/placeholder.svg" />
+    <meta name="twitter:image" content="https://aitoolsguidex.com/placeholder.svg" />
   </head>
 
   <body>
