--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       gtag('config', 'G-4J7HYVSTYD');
     </script>
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8821105119642112"
+         crossorigin="anonymous"></script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Tools Navigation - Discover the Best AI Tools | 发现最佳AI工具</title>
